cluster/ntfy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
  labels:
    tailscale.com/proxy-class: "tailscale-proxy"
    tailscale.com/hostname: "ntfy"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ntfy
