cluster/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
spec:
  defaultBackend:
    service:
      name: ntfy
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
      - ntfy
